--- a/Style.css
+++ b/Style.css
@@ -197,6 +197,7 @@ nav h1{
     display: flex;
     justify-content: center;
     font-size: 8em;
+    overflow: hidden;
 }
 .content p{
     display: flex;
@@ -213,7 +214,7 @@ nav h1{
 }
 .btn:hover{
     background-color: darkorange;
-    box-shadow: 10px 10px 20px;
+    
     transition: all 0.3 ease-in-out;
 }
 .btco{
@@ -231,8 +232,9 @@ nav h1{
 
 
 .review{
+    
     border: 2px solid black;
-   min-width: 3000px;
+    min-width: 3000px;
     height: 100vh;
     background-color: #00C2FF;
     display: flex;
@@ -272,3 +274,6 @@ nav h1{
     width: 100%;
 }
 
+h1 span{
+    display: inline-block;
+    }
